# Orders-API

./: .env.local  .gitignore  README.md  docker-compose.yml
api/: .env.local  Dockerfile  README.md  alembic.ini  configs.py  main.py  pyproject.toml
api/database/: connection.py  query.py
api/helpers/: auth.py  enums.py  hashers.py  logger.py  orjson_coder.py
api/migrations/: env.py
api/migrations/versions/: 2026_02_09_1137-41bfe2119a94_creating_tables.py
api/models/: base.py  orders.py  users.py
api/rabbit_core/: client.py
api/redis_core/: client.py  rate_limiter.py
api/routers/: auth.py  orders.py  ping.py  redirect.py
api/schemas/: orders.py  users.py
event_consumer/: .env.local  FastStream_Dockerfile  README.md  TaskIQ_DockerFille  configs.py  main.py  pyproject.toml
event_consumer/faststream_core/: broker.py
event_consumer/taskiq_core/: broker.py  tasks.py
